# CMakeList.txt : CMake project for PickRandomRows, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.5)

# Add source to this project's executable.
add_executable (PickRandomRows "PickRandomRows.cpp" "PickRandomRows.h")

# TODO: Add tests and install targets if needed.
